# Legacy_vault

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  responses.py  security.py
backend/app/domains/: __init__.py
backend/app/integrations/: __init__.py  email.py  email_templates.py  firebase_auth.py  pdf.py  (+3 more)
docs/email_previews/: heir_designation.html  password_reset.html  security_alert.html  verification_code.html  welcome.html
migrations/: env.py  script.py.mako
migrations/versions/: 20260604_0001_initial_schema.py  20260604_0002_document_storage_metadata.py  20260604_0003_mobile_app_domains.py  20260604_0004_auth_provider_and_email_verification.py  20260604_0005_password_reset_codes.py  20260604_0006_payment_transactions.py
scripts/: smoke_test.py
tests/: conftest.py  test_admin_rbac.py  test_analytics_and_advisor.py  test_auth_session.py  test_beneficiaries_and_access.py  test_beneficiaries_crud.py  test_dashboard.py  test_document_upload_contract.py  test_email_templates.py  test_identity.py  test_inheritance_engine.py  test_inheritance_rules.py  test_legacy.py  test_mfa.py  test_notifications.py  test_password_reset.py  test_paystack_subscriptions.py  test_pdf_and_auth_extensions.py  test_profile_settings.py  test_repositories.py  test_security_audit.py  test_subscriptions.py  test_succession_and_admin.py  test_vault_assets.py  test_vault_crud.py  test_vault_encryption.py  test_verification.py
(+70 files in other folders)
