[project]
name = "eterna-backend"
version = "0.1.0"
description = "Secure digital estate and legacy platform backend."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "boto3>=1.35.50",
    "celery>=5.4.0",
    "cryptography>=43.0.1",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.0",
    "fpdf2>=2.8.1",
    "google-auth>=2.0.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "sqlalchemy>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.app.integrations" = ["email_assets/*.html"]

[tool.ruff]
line-length = 100
target-version = "py312"
